# Software-Development-in-Medical-Engineering

./: .gitignore  README.md
Aufgabe1/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Task2/: 8bit - deleted some bytes.raw  CMakeLists.txt  CTDataset.cpp  CTDataset.h  Doxyfile  widget.cpp  widget.h  widget.ui
Task2-4(for task 5 I deleted the unneeded 8bit and 12 bit and so on)/: widget.h
Task2/MyLib/: CMakeLists.txt  CTDataset.cpp  CTDataset.h
Task2/MyLibUnitTest/: CMakeLists.txt  tst_mylibunittest.cpp
